--- a/raid-pro/logs.html
+++ b/raid-pro/logs.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Saved RAID Logs | Ronnie’s RAID Extractor™ Pro</title>
-  <meta name="description" content="View, search, and export saved RAID logs in Ronnie’s RAID Extractor™ Pro." />
+  <title>Ronnie’s RAID Extractor™ Pro | System & Flow</title>
+  <meta name="description" content="Pro edition of Ronnie’s RAID Extractor™ with full RAID history, multi-format exports, and more." />
   <meta name="theme-color" content="#0b1220" />
+  <meta name="robots" content="noindex,follow" />
+
+  <!-- Social -->
+  <meta property="og:title" content="Ronnie’s RAID Extractor™ Pro | System & Flow" />
+  <meta property="og:description" content="Full Pro access: Save RAID history, export in any format, and unlock advanced features." />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/snf_logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
@@ -16,29 +23,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="/styles.css" />
   <style>
-    .log-card {
-      border: 1px solid var(--border);
-      border-radius: 8px;
-      padding: 1rem;
-      background: var(--panel);
-    }
-    .log-card pre {
-      white-space: pre-wrap;
-      color: var(--ink);
-      margin: 1rem 0;
-    }
-    .log-actions {
-      display: flex;
-      gap: .5rem;
-      flex-wrap: wrap;
-    }
-    #searchBox, #filterType {
-      padding: .65rem;
-      border: 1px solid var(--border);
-      border-radius: 6px;
-      background: var(--panel);
-      color: var(--ink);
-    }
+    mark { background: #ffd54f; padding: 0 2px; border-radius: 2px; }
   </style>
 </head>
 
@@ -60,42 +45,77 @@
     </div>
   </header>
 
-  <!-- Main -->
-  <main class="container" style="max-width: 1000px; margin: 4rem auto; padding: 2rem;">
-    <h1 style="text-align:center;">📂 Saved RAID Logs</h1>
-    <p style="text-align:center; color: var(--muted); margin-bottom: 2rem;">
-      Browse, filter, and export your RAID history.
-    </p>
-
-    <!-- Search & Filter -->
-    <div style="display:flex; gap:1rem; flex-wrap:wrap; margin-bottom:2rem;">
-      <input id="searchBox" type="text" placeholder="🔎 Search logs..." style="flex:1;" />
-      <select id="filterType">
-        <option value="">Filter: All</option>
-        <option value="Risk">Risks</option>
-        <option value="Action">Actions</option>
-        <option value="Issue">Issues</option>
-        <option value="Decision">Decisions</option>
-      </select>
+  <!-- License Gate -->
+  <main class="container" style="max-width: 900px; margin: 4rem auto; padding: 2rem;">
+    <div id="license-gate" style="text-align:center;">
+      <h1>🔒 Enter License Key</h1>
+      <p style="color:var(--muted);">Enter your Pro license key to unlock Ronnie’s RAID Extractor™ Pro.</p>
+      <input id="licenseKey" type="text" placeholder="Enter your license key..."
+        style="width:100%; padding:1rem; margin:1rem 0; border-radius:8px; border:1px solid var(--border); background:var(--panel); color:var(--ink);" />
+      <button id="verifyLicense" class="button primary">Verify License</button>
+      <div id="licenseError" style="color:red; margin-top:1rem; display:none;">❌ Invalid license key or activation limit reached.</div>
     </div>
 
-    <!-- Logs -->
-    <div id="logsList" style="display:grid; gap:1.5rem;"></div>
+    <!-- Pro Content -->
+    <div id="proContent" style="display:none;">
+      <h1 style="text-align:center;">Ronnie’s RAID Extractor™ Pro</h1>
+      <p style="text-align:center; color:var(--muted); margin-bottom:2rem;">
+        Welcome to the <strong>Pro edition</strong> — full access including 
+        <strong>Save RAID history</strong>, <strong>Multi-format export</strong>, and more.
+      </p>
 
-    <!-- Bulk Actions -->
-    <div style="margin-top:2rem; text-align:center;">
-      <button id="exportAll" class="button ghost">⬇ Export All (JSON)</button>
-      <button id="clearAll" class="button ghost" style="margin-left:1rem;">🗑 Clear All</button>
-    </div>
+      <!-- Confidence Score -->
+      <div id="confidence" style="text-align:center; margin-bottom:1rem; font-size:0.95rem; color:var(--muted);">
+        Ronnie’s Confidence Score: <span id="conf-score" style="color:var(--accent); font-weight:600;">0%</span>
+      </div>
 
-    <!-- Coming Soon -->
-    <div style="margin-top:3rem; text-align:center; padding:1rem; border:1px dashed var(--border); border-radius:8px;">
-      <h2>🚀 Coming Soon</h2>
-      <ul style="color:var(--muted); line-height:1.8; list-style:none; padding:0;">
-        <li>📊 RAID Analytics Dashboard (trends & insights)</li>
-        <li>🤝 Team Sharing & Collaboration</li>
-        <li>🔗 Integrations: Jira, Notion, Excel Online</li>
-      </ul>
+      <!-- Transcript Input -->
+      <textarea id="input" rows="12" placeholder="Paste transcript..."
+        style="width:100%; padding:1rem; border-radius:10px; border:1px solid var(--border); background:var(--panel); color:var(--ink);"></textarea>
+
+      <!-- File Upload -->
+      <div style="margin:1rem 0;">
+        <label for="fileInput" style="display:block; margin-bottom:0.5rem; color:var(--muted); font-size:0.9rem;">
+          Or upload a transcript (.txt, .docx, .pdf)
+        </label>
+        <input type="file" id="fileInput" accept=".txt,.docx,.pdf" style="color:var(--ink);" />
+      </div>
+
+      <!-- Action Buttons -->
+      <div style="margin-top:1.5rem; display:flex; gap:1rem; flex-wrap:wrap;">
+        <button id="run" class="button primary">Extract RAID</button>
+        <button onclick="exportOutput('csv')" class="button ghost">⬇ CSV</button>
+        <button onclick="exportOutput('excel')" class="button ghost">⬇ Excel</button>
+        <button onclick="exportOutput('pdf')" class="button ghost">⬇ PDF</button>
+        <button onclick="exportOutput('word')" class="button ghost">⬇ Word</button>
+        <button onclick="exportOutput('md')" class="button ghost">⬇ Markdown</button>
+        <button onclick="exportOutput('json')" class="button ghost">⬇ JSON</button>
+        <button id="copy" class="button ghost">📋 Copy</button>
+        <button id="save" class="button ghost">💾 Save RAID Log</button>
+      </div>
+
+      <div id="output" style="margin-top:2rem;"></div>
+
+      <!-- Pro Status -->
+      <div id="pro-banner" style="margin-top:2rem; text-align:center; padding:1rem; border:1px solid var(--accent); border-radius:8px; background:var(--panel); color:var(--accent);">
+        🎉 You are using the <strong>Pro version</strong> — all features unlocked.
+      </div>
+
+      <!-- Coming Soon -->
+      <div style="margin-top:3rem;">
+        <h2 style="text-align:center;">🚀 Coming Soon for Pro Users</h2>
+        <ul style="color:var(--muted); line-height:1.8;">
+          <li>📊 RAID Analytics Dashboard — track trends across logs.</li>
+          <li>🤝 Team Sharing — collaborate with your team.</li>
+          <li>🧠 AI Summary Generator — instant exec summaries.</li>
+          <li>🔗 Integrations — Jira, Notion, Excel Online.</li>
+        </ul>
+      </div>
+
+      <!-- Saved Logs -->
+      <div style="margin-top:2rem; text-align:center;">
+        <a href="/raid-pro/logs.html" class="button ghost">📂 View Saved Logs</a>
+      </div>
     </div>
   </main>
 
@@ -109,12 +129,12 @@
         <span class="tagline">Smarter tools. Faster PMs.</span>
       </div>
       <div class="foot-right">
-        <a href="https://www.tiktok.com/@systemnflow" target="_blank">TikTok</a>
-        <a href="https://www.instagram.com/systemnflow" target="_blank">Instagram</a>
-        <a href="https://www.pinterest.com/systemnflow" target="_blank">Pinterest</a>
-        <a href="https://www.youtube.com/@Systemnflow" target="_blank">YouTube</a>
-        <a href="https://www.linkedin.com/company/systemnflow" target="_blank">LinkedIn</a>
-        <a href="https://www.facebook.com/systemnflow" target="_blank">Facebook</a>
+        <a href="https://www.tiktok.com/@systemnflow" target="_blank" rel="noopener">TikTok</a>
+        <a href="https://www.instagram.com/systemnflow" target="_blank" rel="noopener">Instagram</a>
+        <a href="https://www.pinterest.com/systemnflow" target="_blank" rel="noopener">Pinterest</a>
+        <a href="https://www.youtube.com/@Systemnflow" target="_blank" rel="noopener">YouTube</a>
+        <a href="https://www.linkedin.com/company/systemnflow" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://www.facebook.com/systemnflow" target="_blank" rel="noopener">Facebook</a>
       </div>
     </div>
     <div class="legal">© <span id="y"></span> System & Flow™. All rights reserved.</div>
@@ -124,88 +144,105 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
 
-    function renderLogs() {
-      const logs = JSON.parse(localStorage.getItem("raidLogs") || "[]");
-      const search = document.getElementById("searchBox").value.toLowerCase();
-      const filter = document.getElementById("filterType").value;
-      const logsList = document.getElementById("logsList");
-      logsList.innerHTML = "";
-
-      logs.forEach((log, index) => {
-        if ((search && !log.content.toLowerCase().includes(search)) ||
-            (filter && !log.content.includes(filter))) return;
-
-        const card = document.createElement("div");
-        card.className = "log-card";
-        card.innerHTML = `
-          <p style="color:var(--muted); font-size:0.9rem;">📅 ${new Date(log.date).toLocaleString()}</p>
-          <pre>${log.content}</pre>
-          <div class="log-actions">
-            <button onclick="exportLog(${index}, 'csv')" class="button ghost">⬇ CSV</button>
-            <button onclick="exportLog(${index}, 'excel')" class="button ghost">⬇ Excel</button>
-            <button onclick="exportLog(${index}, 'pdf')" class="button ghost">⬇ PDF</button>
-            <button onclick="exportLog(${index}, 'word')" class="button ghost">⬇ Word</button>
-            <button onclick="exportLog(${index}, 'md')" class="button ghost">⬇ Markdown</button>
-            <button onclick="exportLog(${index}, 'json')" class="button ghost">⬇ JSON</button>
-            <button onclick="copyLog(${index})" class="button ghost">📋 Copy</button>
-            <button onclick="deleteLog(${index})" class="button ghost">🗑 Delete</button>
-          </div>
-        `;
-        logsList.appendChild(card);
+    // 🔐 License validation
+    document.getElementById("verifyLicense").addEventListener("click", async () => {
+      const key = document.getElementById("licenseKey").value.trim();
+      const res = await fetch("/api/verify-license", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ license_key: key })
       });
+      const data = await res.json();
+
+      if (data.valid) {
+        localStorage.setItem("proUser", "true");
+        document.getElementById("license-gate").style.display = "none";
+        document.getElementById("proContent").style.display = "block";
+      } else {
+        document.getElementById("licenseError").style.display = "block";
+      }
+    });
+
+    if (localStorage.getItem("proUser") === "true") {
+      document.getElementById("license-gate").style.display = "none";
+      document.getElementById("proContent").style.display = "block";
     }
 
-    function exportLog(index, format) {
-      const logs = JSON.parse(localStorage.getItem("raidLogs") || "[]");
-      const log = logs[index];
+    // RAID Extraction
+    function extractRAID() {
+      const text = document.getElementById("input").value;
+      const output = document.getElementById("output");
+      if (!text.trim()) {
+        output.innerHTML = "<p style='color:var(--muted)'>Please paste or upload a transcript.</p>";
+        document.getElementById("conf-score").textContent = "0%";
+        return;
+      }
+
+      const categories = { Risks: [], Actions: [], Issues: [], Decisions: [] };
+      const lines = text.split(/\r?\n/);
+      lines.forEach(line => {
+        if (/risk/i.test(line)) categories.Risks.push(line.replace(/(risk[:]?)/ig,"<mark>$1</mark>"));
+        else if (/action/i.test(line)) categories.Actions.push(line.replace(/(action[:]?)/ig,"<mark>$1</mark>"));
+        else if (/issue/i.test(line)) categories.Issues.push(line.replace(/(issue[:]?)/ig,"<mark>$1</mark>"));
+        else if (/decision/i.test(line)) categories.Decisions.push(line.replace(/(decision[:]?)/ig,"<mark>$1</mark>"));
+      });
+
+      const tagged = Object.values(categories).reduce((a,b)=>a+b.length,0);
+      const score = Math.round((tagged / lines.length) * 100);
+      const scoreEl = document.getElementById("conf-score");
+      scoreEl.textContent = isNaN(score) ? "0%" : score + "%";
+      scoreEl.style.color = score >= 70 ? "limegreen" : score >= 40 ? "orange" : "red";
+
+      let html = "";
+      for (const [key, arr] of Object.entries(categories)) {
+        html += `<h3>${key} (${arr.length})</h3><ul>`;
+        if (arr.length) arr.forEach(l => html += `<li>${l}</li>`);
+        else html += `<li><em>No ${key.toLowerCase()} found.</em></li>`;
+        html += `</ul>`;
+      }
+      output.innerHTML = html;
+
+      return { content: output.innerText, confidence: score };
+    }
+
+    // Run + Save
+    document.getElementById("run").addEventListener("click", extractRAID);
+    document.getElementById("save").addEventListener("click", () => {
+      const result = extractRAID();
+      if (!result) return;
+      let logs = JSON.parse(localStorage.getItem("raidLogs") || "[]");
+      logs.push({ date: new Date().toISOString(), content: result.content, confidence: result.confidence });
+      localStorage.setItem("raidLogs", JSON.stringify(logs));
+      alert("✅ RAID log saved with confidence score!");
+    });
+
+    // Copy
+    document.getElementById("copy").addEventListener("click", async () => {
+      const result = extractRAID();
+      if (!result) return;
+      await navigator.clipboard.writeText(`Confidence: ${result.confidence}%\n\n${result.content}`);
+      alert("📋 RAID copied to clipboard!");
+    });
+
+    // Export helper
+    function exportOutput(format) {
+      const result = extractRAID();
+      if (!result) return;
+      const { content, confidence } = result;
       let blob;
       switch (format) {
-        case "csv": blob = new Blob([`"Date","Content"\n"${log.date}","${log.content.replace(/"/g,'""')}"`], { type:"text/csv" }); break;
-        case "excel": blob = new Blob([log.content], { type:"application/vnd.ms-excel" }); break;
-        case "pdf": blob = new Blob([log.content], { type:"application/pdf" }); break;
-        case "word": blob = new Blob([log.content], { type:"application/msword" }); break;
-        case "md": blob = new Blob([log.content], { type:"text/markdown" }); break;
-        case "json": blob = new Blob([JSON.stringify(log,null,2)], { type:"application/json" }); break;
+        case "csv": blob = new Blob([`"Date","Confidence","Content"\n"${new Date().toISOString()}","${confidence}%","${content.replace(/"/g,'""')}"`], { type:"text/csv" }); break;
+        case "excel": blob = new Blob([content], { type:"application/vnd.ms-excel" }); break;
+        case "pdf": blob = new Blob([content], { type:"application/pdf" }); break;
+        case "word": blob = new Blob([content], { type:"application/msword" }); break;
+        case "md": blob = new Blob([content], { type:"text/markdown" }); break;
+        case "json": blob = new Blob([JSON.stringify({ date:new Date().toISOString(), confidence, content },null,2)], { type:"application/json" }); break;
       }
       const a = document.createElement("a");
       a.href = URL.createObjectURL(blob);
-      a.download = `raid-log-${index+1}.${format}`;
+      a.download = `raid-log.${format}`;
       a.click();
     }
-
-    function copyLog(index) {
-      const logs = JSON.parse(localStorage.getItem("raidLogs") || "[]");
-      navigator.clipboard.writeText(logs[index].content);
-      alert("📋 Log copied to clipboard!");
-    }
-
-    function deleteLog(index) {
-      let logs = JSON.parse(localStorage.getItem("raidLogs") || "[]");
-      logs.splice(index, 1);
-      localStorage.setItem("raidLogs", JSON.stringify(logs));
-      renderLogs();
-    }
-
-    document.getElementById("exportAll").addEventListener("click", () => {
-      const logs = JSON.parse(localStorage.getItem("raidLogs") || "[]");
-      const blob = new Blob([JSON.stringify(logs,null,2)], { type:"application/json" });
-      const a = document.createElement("a");
-      a.href = URL.createObjectURL(blob);
-      a.download = "all-raid-logs.json";
-      a.click();
-    });
-
-    document.getElementById("clearAll").addEventListener("click", () => {
-      if (confirm("⚠️ Clear all logs? This cannot be undone.")) {
-        localStorage.removeItem("raidLogs");
-        renderLogs();
-      }
-    });
-
-    document.getElementById("searchBox").addEventListener("input", renderLogs);
-    document.getElementById("filterType").addEventListener("change", renderLogs);
-
-    renderLogs();
   </script>
 </body>
 </html>
