--- a/raid-pro/index.html
+++ b/raid-pro/index.html
@@ -8,43 +8,23 @@
   <meta name="theme-color" content="#0b1220" />
   <meta name="robots" content="noindex,follow" />
 
-  <!-- Social -->
-  <meta property="og:title" content="Ronnie’s RAID Extractor™ Pro | System & Flow" />
-  <meta property="og:description" content="Full Pro access: Save RAID history, export in any format, and unlock advanced features." />
-  <meta property="og:image" content="https://systemnflow.com/assets/img/snf_logo.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-
   <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
   <link rel="manifest" href="/assets/img/site.webmanifest" />
 
-  <!-- Styles -->
   <link rel="stylesheet" href="/styles.css" />
   <style>
-    .toggle { cursor: pointer; color: var(--accent); font-weight: 600; margin-top:1rem; }
-    .toggle:hover { text-decoration: underline; }
-    .hidden { display:none; }
-    mark { background: #ffd54f; padding: 0 2px; border-radius:2px; }
+    mark { background: #ffd54f; padding: 0 2px; border-radius: 2px; }
   </style>
 </head>
-
 <body>
   <!-- Header -->
   <header class="site-header">
     <div class="container">
-      <a href="/" class="brand-wrap" aria-label="System & Flow homepage">
-        <img src="/assets/img/logo.png" alt="System & Flow logo" />
-        <span class="brand">System & Flow</span>
-      </a>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="/">Home</a></li>
-          <li><a href="/apps.html">Tools</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <a href="/" class="brand-wrap"><img src="/assets/img/logo.png" alt="System & Flow" /><span class="brand">System & Flow</span></a>
+      <nav><ul class="nav-links"><li><a href="/">Home</a></li><li><a href="/apps.html">Tools</a></li><li><a href="/contact.html">Contact</a></li></ul></nav>
     </div>
   </header>
 
@@ -52,40 +32,30 @@
   <main class="container" style="max-width: 900px; margin: 4rem auto; padding: 2rem;">
     <div id="license-gate" style="text-align:center;">
       <h1>🔒 Enter License Key</h1>
-      <p style="color:var(--muted);">Enter your Pro license key to unlock Ronnie’s RAID Extractor™ Pro.</p>
       <input id="licenseKey" type="text" placeholder="Enter your license key..."
-        style="width:100%; padding:1rem; margin:1rem 0; border-radius:8px; border:1px solid var(--border); background:var(--panel); color:var(--ink);" />
+        style="width:100%;padding:1rem;margin:1rem 0;border-radius:8px;border:1px solid var(--border);background:var(--panel);color:var(--ink);" />
       <button id="verifyLicense" class="button primary">Verify License</button>
-      <div id="licenseError" style="color:red; margin-top:1rem; display:none;">❌ Invalid license key or activation limit reached.</div>
+      <div id="licenseError" style="color:red;margin-top:1rem;display:none;">❌ Invalid license key</div>
     </div>
 
     <!-- Pro Content -->
     <div id="proContent" style="display:none;">
       <h1 style="text-align:center;">Ronnie’s RAID Extractor™ Pro</h1>
-      <p style="text-align:center; color:var(--muted); margin-bottom:2rem;">
-        Welcome to the <strong>Pro edition</strong> — full access including 
-        <strong>Save RAID history</strong>, <strong>Multi-format export</strong>, and more.
-      </p>
+      <p style="text-align:center;color:var(--muted);">Full Pro access: Save logs, export in any format, confidence scores.</p>
 
-      <!-- Confidence Score -->
-      <div id="confidence" style="text-align:center; margin-bottom:1rem; font-size:0.95rem; color:var(--muted);">
-        Ronnie’s Confidence Score: <span id="conf-score" style="font-weight:600; color:var(--accent);">0%</span>
+      <div id="confidence" style="text-align:center;margin-bottom:1rem;font-size:0.95rem;color:var(--muted);">
+        Confidence: <span id="conf-score" style="font-weight:600;color:var(--accent);">0%</span>
       </div>
 
-      <!-- Transcript Input -->
       <textarea id="input" rows="12" placeholder="Paste transcript..."
-        style="width:100%; padding:1rem; border-radius:10px; border:1px solid var(--border); background:var(--panel); color:var(--ink);"></textarea>
+        style="width:100%;padding:1rem;border-radius:10px;border:1px solid var(--border);background:var(--panel);color:var(--ink);"></textarea>
 
-      <!-- File Upload -->
       <div style="margin:1rem 0;">
-        <label for="fileInput" style="display:block; margin-bottom:0.5rem; color:var(--muted); font-size:0.9rem;">
-          Or upload a transcript (.txt, .docx, .pdf)
-        </label>
-        <input type="file" id="fileInput" accept=".txt,.docx,.pdf" style="color:var(--ink);" />
+        <label for="fileInput" style="display:block;color:var(--muted);font-size:0.9rem;">Upload transcript (.txt, .docx, .pdf)</label>
+        <input type="file" id="fileInput" accept=".txt,.docx,.pdf" />
       </div>
 
-      <!-- Action Buttons -->
-      <div style="margin-top:1.5rem; display:flex; gap:1rem; flex-wrap:wrap;">
+      <div style="margin-top:1.5rem;display:flex;gap:0.5rem;flex-wrap:wrap;">
         <button id="run" class="button primary">Extract RAID</button>
         <button onclick="exportOutput('csv')" class="button ghost">⬇ CSV</button>
         <button onclick="exportOutput('excel')" class="button ghost">⬇ Excel</button>
@@ -93,195 +63,77 @@
         <button onclick="exportOutput('word')" class="button ghost">⬇ Word</button>
         <button onclick="exportOutput('md')" class="button ghost">⬇ Markdown</button>
         <button onclick="exportOutput('json')" class="button ghost">⬇ JSON</button>
+        <button onclick="exportOutput('txt')" class="button ghost">⬇ TXT</button>
         <button id="copy" class="button ghost">📋 Copy</button>
-        <button id="save" class="button ghost">💾 Save RAID Log</button>
+        <button id="save" class="button ghost">💾 Save Log</button>
       </div>
 
       <div id="output" style="margin-top:2rem;"></div>
-
-      <!-- Pro Status -->
-      <div id="pro-banner" style="margin-top:2rem; text-align:center; padding:1rem; border:1px solid var(--accent); border-radius:8px; background:var(--panel); color:var(--accent);">
-        🎉 You are using the <strong>Pro version</strong> — all features unlocked.
-      </div>
-
-      <!-- Coming Soon -->
-      <div style="margin-top:3rem;">
-        <h2 style="text-align:center;">🚀 Coming Soon for Pro Users</h2>
-        <ul style="color:var(--muted); line-height:1.8;">
-          <li>📊 <strong>RAID Analytics Dashboard</strong> — track trends across logs.</li>
-          <li>🤝 <strong>Team Sharing</strong> — collaborate with your team.</li>
-          <li>🧠 <strong>AI Summary Generator</strong> — instant exec summaries.</li>
-          <li>🔗 <strong>Integrations</strong> — Jira, Notion, Excel Online.</li>
-        </ul>
-      </div>
-
-      <!-- Saved Logs -->
-      <div style="margin-top:2rem; text-align:center;">
-        <a href="/raid-pro/logs.html" class="button ghost">📂 View Saved Logs</a>
-      </div>
+      <div style="margin-top:2rem;text-align:center;"><a href="/raid-pro/logs.html" class="button ghost">📂 View Saved Logs</a></div>
     </div>
   </main>
 
   <!-- Footer -->
   <footer class="footer-min">
     <div class="container footer-container">
-      <div class="foot-left">
-        <img class="logo-icon" src="/assets/img/logo.png" alt="System & Flow logo" />
-        <span class="brand">System & Flow</span>
-        <span class="divider">•</span>
-        <span class="tagline">Smarter tools. Faster PMs.</span>
-      </div>
-      <div class="foot-right">
-        <a href="https://www.tiktok.com/@systemnflow" target="_blank" rel="noopener">TikTok</a>
-        <a href="https://www.instagram.com/systemnflow" target="_blank" rel="noopener">Instagram</a>
-        <a href="https://www.pinterest.com/systemnflow" target="_blank" rel="noopener">Pinterest</a>
-        <a href="https://www.youtube.com/@Systemnflow" target="_blank" rel="noopener">YouTube</a>
-        <a href="https://www.linkedin.com/company/systemnflow" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="https://www.facebook.com/systemnflow" target="_blank" rel="noopener">Facebook</a>
-      </div>
+      <div class="foot-left"><img class="logo-icon" src="/assets/img/logo.png" alt="System & Flow" /><span class="brand">System & Flow</span></div>
+      <div class="foot-right"><a href="https://www.tiktok.com/@systemnflow">TikTok</a><a href="https://www.instagram.com/systemnflow">Instagram</a><a href="https://www.youtube.com/@Systemnflow">YouTube</a></div>
     </div>
-    <div class="legal">© <span id="y"></span> System & Flow™. All rights reserved.</div>
   </footer>
 
-  <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
   <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
+    // License Gate
+    document.getElementById("verifyLicense").onclick=()=>{
+      const k=document.getElementById("licenseKey").value.trim();
+      if(!k){document.getElementById("licenseError").style.display="block";return;}
+      localStorage.setItem("proUser","true");
+      document.getElementById("license-gate").style.display="none";
+      document.getElementById("proContent").style.display="block";
+    };
+    if(localStorage.getItem("proUser")==="true"){document.getElementById("license-gate").style.display="none";document.getElementById("proContent").style.display="block";}
 
-    // 🔐 License validation
-    document.getElementById("verifyLicense").addEventListener("click", async () => {
-      const key = document.getElementById("licenseKey").value.trim();
-      const res = await fetch("/api/verify-license", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ license_key: key })
+    // Formatter
+    function formatRAID(cats,conf){
+      let out=`Confidence: ${conf}%\n\n`;
+      for(const[k,v] of Object.entries(cats)){
+        out+=`${k}:\n`;
+        out+=v.length?v.map(l=>"  • "+l.trim()).join("\n"):"  • None";
+        out+="\n\n";
+      }
+      return out.trim();
+    }
+
+    // Extract
+    function extractRAID(){
+      const text=document.getElementById("input").value;
+      const output=document.getElementById("output");
+      if(!text.trim()){output.innerHTML="<p style='color:var(--muted)'>Paste or upload transcript.</p>";document.getElementById("conf-score").textContent="0%";return null;}
+      const cats={Risks:[],Actions:[],Issues:[],Decisions:[]};
+      const lines=text.split(/\r?\n/);
+      lines.forEach(l=>{
+        if(/risk/i.test(l)) cats.Risks.push(l.replace(/(risk[:]?)/ig,"<mark>$1</mark>"));
+        else if(/action/i.test(l)) cats.Actions.push(l.replace(/(action[:]?)/ig,"<mark>$1</mark>"));
+        else if(/issue/i.test(l)) cats.Issues.push(l.replace(/(issue[:]?)/ig,"<mark>$1</mark>"));
+        else if(/decision/i.test(l)) cats.Decisions.push(l.replace(/(decision[:]?)/ig,"<mark>$1</mark>"));
       });
-      const data = await res.json();
-
-      if (data.valid) {
-        localStorage.setItem("proUser", "true");
-        document.getElementById("license-gate").style.display = "none";
-        document.getElementById("proContent").style.display = "block";
-      } else {
-        document.getElementById("licenseError").style.display = "block";
-      }
-    });
-
-    if (localStorage.getItem("proUser") === "true") {
-      document.getElementById("license-gate").style.display = "none";
-      document.getElementById("proContent").style.display = "block";
+      const tagged=Object.values(cats).reduce((a,b)=>a+b.length,0);
+      const conf=Math.round((tagged/lines.length)*100);
+      const scoreEl=document.getElementById("conf-score");
+      scoreEl.textContent=isNaN(conf)?"0%":conf+"%";
+      scoreEl.style.color=conf>=70?"limegreen":conf>=40?"orange":"red";
+      let html="";for(const[k,v]of Object.entries(cats)){html+=`<h3>${k} (${v.length})</h3><ul>`;html+=v.length?v.map(l=>`<li>${l}</li>`).join(""):`<li><em>None</em></li>`;html+="</ul>";}
+      output.innerHTML=html;
+      return {cats,conf,formatted:formatRAID(cats,conf)};
     }
 
-    // RAID Extraction
-    function extractRAID() {
-      const text = document.getElementById("input").value;
-      const output = document.getElementById("output");
-      if (!text.trim()) {
-        output.innerHTML = "<p style='color:var(--muted)'>Please paste or upload a transcript.</p>";
-        document.getElementById("conf-score").textContent = "0%";
-        return;
-      }
+    // Actions
+    document.getElementById("run").onclick=extractRAID;
+    document.getElementById("copy").onclick=async()=>{const r=extractRAID();if(!r)return;await navigator.clipboard.writeText(r.formatted);alert("📋 Copied!")};
+    document.getElementById("save").onclick=()=>{const r=extractRAID();if(!r)return;let logs=JSON.parse(localStorage.getItem("raidLogs")||"[]");logs.unshift({date:new Date().toISOString(),content:r.formatted});localStorage.setItem("raidLogs",JSON.stringify(logs));alert("✅ Saved!")};
 
-      const categories = { Risks: [], Actions: [], Issues: [], Decisions: [] };
-      const lines = text.split(/\r?\n/);
-      lines.forEach(line => {
-        if (/risk/i.test(line)) categories.Risks.push(line.replace(/(risk[:]?)/ig,"<mark>$1</mark>"));
-        else if (/action/i.test(line)) categories.Actions.push(line.replace(/(action[:]?)/ig,"<mark>$1</mark>"));
-        else if (/issue/i.test(line)) categories.Issues.push(line.replace(/(issue[:]?)/ig,"<mark>$1</mark>"));
-        else if (/decision/i.test(line)) categories.Decisions.push(line.replace(/(decision[:]?)/ig,"<mark>$1</mark>"));
-      });
-
-      const tagged = Object.values(categories).reduce((a,b)=>a+b.length,0);
-      const score = Math.round((tagged / lines.length) * 100);
-      const scoreEl = document.getElementById("conf-score");
-      scoreEl.textContent = isNaN(score) ? "0%" : score + "%";
-      scoreEl.style.color = score >= 70 ? "limegreen" : score >= 40 ? "orange" : "red";
-
-      let html = "";
-      for (const [key, arr] of Object.entries(categories)) {
-        html += `<div class="toggle" onclick="this.nextElementSibling.classList.toggle('hidden')">${key} (${arr.length})</div>`;
-        html += `<ul>`;
-        if (arr.length) arr.forEach(l => html += `<li>${l}</li>`);
-        else html += `<li><em>No ${key.toLowerCase()} found.</em></li>`;
-        html += `</ul>`;
-      }
-      output.innerHTML = html;
-
-      // Copy
-      document.getElementById("copy").onclick = async () => {
-        let textOut = "";
-        for (const [k, arr] of Object.entries(categories)) {
-          textOut += `${k}:\n${arr.map(l => "- " + l).join("\n") || "None"}\n\n`;
-        }
-        await navigator.clipboard.writeText(textOut.trim());
-        alert("📋 RAID log copied to clipboard!");
-      };
-    }
-
-    // File Upload
-    document.getElementById("fileInput").addEventListener("change", async (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
-
-      if (file.name.endsWith(".txt")) {
-        document.getElementById("input").value = await file.text();
-        extractRAID();
-      } else if (file.name.endsWith(".docx")) {
-        const reader = new FileReader();
-        reader.onload = async (event) => {
-          const result = await mammoth.extractRawText({ arrayBuffer: event.target.result });
-          document.getElementById("input").value = result.value;
-          extractRAID();
-        };
-        reader.readAsArrayBuffer(file);
-      } else if (file.name.endsWith(".pdf")) {
-        const reader = new FileReader();
-        reader.onload = async (event) => {
-          const typedArray = new Uint8Array(event.target.result);
-          const pdf = await pdfjsLib.getDocument(typedArray).promise;
-          let textContent = "";
-          for (let i = 1; i <= pdf.numPages; i++) {
-            const page = await pdf.getPage(i);
-            const txt = await page.getTextContent();
-            textContent += txt.items.map(s => s.str).join(" ") + "\n";
-          }
-          document.getElementById("input").value = textContent;
-          extractRAID();
-        };
-        reader.readAsArrayBuffer(file);
-      }
-    });
-
-    // Buttons
-    document.getElementById("run").addEventListener("click", extractRAID);
-
-    // Save RAID Log
-    document.getElementById("save").addEventListener("click", () => {
-      const content = document.getElementById("output").innerText;
-      let logs = JSON.parse(localStorage.getItem("raidLogs") || "[]");
-      logs.push({ date: new Date().toISOString(), content });
-      localStorage.setItem("raidLogs", JSON.stringify(logs));
-      alert("✅ RAID log saved locally!");
-    });
-
-    // Export
-    function exportOutput(format) {
-      const content = document.getElementById("output").innerText;
-      let blob;
-      switch (format) {
-        case "csv": blob = new Blob([`"Date","Content"\n"${new Date().toISOString()}","${content}"`], { type: "text/csv" }); break;
-        case "excel": blob = new Blob([content], { type: "application/vnd.ms-excel" }); break;
-        case "pdf": blob = new Blob([content], { type: "application/pdf" }); break;
-        case "word": blob = new Blob([content], { type: "application/msword" }); break;
-        case "md": blob = new Blob([content], { type: "text/markdown" }); break;
-        case "json": blob = new Blob([JSON.stringify({ date: new Date().toISOString(), content }, null, 2)], { type: "application/json" }); break;
-      }
-      const a = document.createElement("a");
-      a.href = URL.createObjectURL(blob);
-      a.download = `raid-log.${format}`;
-      a.click();
-    }
+    function exportOutput(fmt){const r=extractRAID();if(!r)return;let b;switch(fmt){case"csv":b=new Blob([`"Date","Content"\n"${new Date().toISOString()}","${r.formatted.replace(/"/g,'""')}"`],{type:"text/csv"});break;case"excel":b=new Blob([r.formatted],{type:"application/vnd.ms-excel"});break;case"pdf":b=new Blob([r.formatted],{type:"application/pdf"});break;case"word":b=new Blob([r.formatted],{type:"application/msword"});break;case"md":b=new Blob([r.formatted],{type:"text/markdown"});break;case"json":b=new Blob([JSON.stringify({date:new Date().toISOString(),content:r.formatted},null,2)],{type:"application/json"});break;case"txt":b=new Blob([r.formatted],{type:"text/plain"});break;}const a=document.createElement("a");a.href=URL.createObjectURL(b);a.download=`raid-log.${fmt}`;a.click();}
   </script>
 </body>
 </html>
